# localai-optimizer-

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
Tests/: test_benchmark.py  test_optimize.py
localai_optimizer.egg-info/: PKG-INFO  entry_points.txt  requires.txt
src/localai_optimizer/: benchmark.py  cli.py  convert.py  optimize.py  quantize.py  report.py
src/localai_optimizer.egg-info/: SOURCES.txt  top_level.txt
