[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localai-optimizer"
version = "0.1.0"
authors = [
  { name="LocalAI Optimizer" },
]
description = "One-command optimization tool for AI models — quantize, minimize, and convert for local inference."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LocalAI-Optimizer/localai-optimizer"
"Bug Tracker" = "https://github.com/LocalAI-Optimizer/localai-optimizer/issues"

[project.scripts]
localai = "localai_optimizer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true



