[metadata]
name = localai-optimizer
version = 0.1.0
author = LocalAI Optimizer
author_email = 
description = One-command optimization tool for AI models — quantize, minimize, and convert for local inference.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LocalAI-Optimizer/localai-optimizer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    transformers
    optimum
    onnxruntime
    llama-cpp-python
    tqdm
    rich

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    localai = localai_optimizer.cli:main

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy


